--- a/css/no_insurance.css
+++ b/css/no_insurance.css
@@ -11,7 +11,7 @@
     background: linear-gradient(153.91deg, #453CC9 57.82%, rgba(34, 175, 241, 0) 122.45%);
     border-radius: 50%;
 }
-.edit{
+.repair{
     position: absolute;
     width: 100%;
 }
