--- a/css/repair_insurance.css
+++ b/css/repair_insurance.css
@@ -11,44 +11,27 @@
     background: linear-gradient(153.91deg, #453CC9 57.82%, rgba(34, 175, 241, 0) 122.45%);
     border-radius: 50%;
 }
-.edit{
+.repair{
     position: absolute;
     width: 100%;
 }
-.input1 {
-    display: block;
-    width: 100%;
-    height: 45px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
+.input {
     border: 1px solid #000000;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    padding: 1rem;
     border-radius: 48px;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    width: 339px;
+    height: 45px;
+    background: white;
+    transition: 0.3s;
 }
-.input1:hover,.input1:focus,.input1.focus {
-    display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
+.input:hover,.input:focus,.input.focus {
     border: 1px solid #1C86F0;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    padding: 1rem;
     border-radius: 48px;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    width: 339px;
+    height: 45px;
+    background: white;
+    transition: 0.3s;
 }
 .address {
     border: 1px solid #000000;
